--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "react-icons": "^4.6.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
